--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -197,4 +197,6 @@
   howpublished = {\url{https://www.vulkan.org/}},
 }
 
-
+@msic{vcs_survey,
+  title={StackOverflow Developer Survey 2022},
+  howpublished={\url{https://survey.stackoverflow.co/2022/#section-version-control-version-control-systems}}}
