Optimised image sizes.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -199,4 +199,10 @@
 
 @msic{vcs_survey,
   title={StackOverflow Developer Survey 2022},
-  howpublished={\url{https://survey.stackoverflow.co/2022/#section-version-control-version-control-systems}}}
+  howpublished={\url{https://survey.stackoverflow.co/2022/#section-version-control-version-control-systems}}
+}
+
+@msic{agile,
+  title={Agile Development Life Cycle},
+  howpublished={\url{https://survey.stackoverflow.co/2022/#section-version-control-version-control-systems}}
+}
